Добавлена интеграция с парсером Edostavka и поиском
Добавлен парсер EdostavkaParser для получения данных о продуктах и модель Dishes. Интегрирован поиск блюд в AddActivity с задержкой ввода и обновлением интерфейса. Обновлён layout: добавлены SearchView и RecyclerView. Добавлено разрешение на доступ в интернет и зависимость jsoup. Удалён стандартный ExampleUnitTest, добавлен тест для парсера.

--- a/src/main/res/layout/activity_add.xml
+++ b/src/main/res/layout/activity_add.xml
@@ -7,14 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".AddActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewIngredients"
+    <com.google.android.material.search.SearchView
+        android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+    </com.google.android.material.search.SearchView>
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/searchLayout"
