--- a/src/main/res/layout/activity_add.xml
+++ b/src/main/res/layout/activity_add.xml
@@ -19,7 +19,28 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:visibility="invisible" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="@style/CustomProgressBar"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:indeterminate="true"
+            android:visibility="invisible"
+            android:layout_gravity="center"/>
+
+        <TextView
+            android:id="@+id/textViewNothing"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha="0.5"
+            android:text="@string/NothingFind"
+
+            android:textSize="20sp"
+            android:visibility="invisible"
+            android:layout_gravity="center"/>
 
     </com.google.android.material.search.SearchView>
 
