--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -7,4 +7,8 @@
 
     <style name="Theme.MyDishes" parent="Base.Theme.MyDishes" />
 
+    <style name="CustomProgressBar" parent="Widget.AppCompat.ProgressBar">
+        <item name="android:indeterminateTint">?attr/colorPrimary</item>
+    </style>
+
 </resources>
