--- a/src/main/res/layout/activity_add.xml
+++ b/src/main/res/layout/activity_add.xml
@@ -2,15 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/addActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="?attr/colorBackgroundFloating"
     tools:context=".AddActivity">
 
     <com.google.android.material.search.SearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:backgroundTint="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,6 +22,7 @@
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:backgroundTint="@android:color/transparent"
             android:visibility="invisible" />
 
         <ProgressBar
@@ -27,20 +30,22 @@
             style="@style/CustomProgressBar"
             android:layout_width="48dp"
             android:layout_height="48dp"
+            android:layout_gravity="center"
             android:indeterminate="true"
-            android:visibility="invisible"
-            android:layout_gravity="center"/>
+            android:visibility="invisible" />
 
         <TextView
             android:id="@+id/textViewNothing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:alpha="0.5"
+            android:ellipsize="end"
+            android:maxLines="2"
             android:text="@string/NothingFind"
-
+            android:textColor="?attr/colorOnBackground"
             android:textSize="20sp"
-            android:visibility="invisible"
-            android:layout_gravity="center"/>
+            android:visibility="invisible" />
 
     </com.google.android.material.search.SearchView>
 
@@ -48,6 +53,7 @@
         android:id="@+id/searchLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:backgroundTint="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,8 +64,12 @@
             android:id="@+id/searchBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/searchbar_hint" />
+            android:hint="@string/searchbar_hint"
+            app:hintTextColor="?attr/colorOnBackground"
+            app:navigationIconTint="?attr/colorOnBackground"
+            app:strokeColor="?attr/colorOnBackground"
+            app:subtitleTextColor="?attr/colorOnBackground"
+            app:titleTextColor="?attr/colorOnBackground" />
     </com.google.android.material.appbar.AppBarLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
