Добавлен парсинг деталей продукта и логика построения блюда (Есть Ошибки)
Добавлен класс DishProductsBuilder для управления продуктами в блюде, переработан EdostavkaParser — теперь он расширяет новый абстрактный класс Parser, реализован парсинг КБЖУ (калории, белки, жиры, углеводы). Обновлены RecyclerViewDishesAdapter и AddActivity для поддержки асинхронной загрузки данных и управления списком продуктов блюда. Добавлен утилитный метод безопасного парсинга float, новые ресурсы: drawable и layout для кнопки добавления продукта, улучшено покрытие тестами логики парсинга.

--- a/src/main/res/layout/activity_add.xml
+++ b/src/main/res/layout/activity_add.xml
@@ -25,6 +25,15 @@
             android:backgroundTint="@android:color/transparent"
             android:visibility="invisible" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/productListButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:contentDescription="@string/fab_content_desc"
+            app:srcCompat="@drawable/baseline_add_task_24"/>
+
         <ProgressBar
             android:id="@+id/progressBar"
             style="@style/CustomProgressBar"
