--- a/src/main/res/layout/activity_add.xml
+++ b/src/main/res/layout/activity_add.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/add_products_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:backgroundTint="@android:color/transparent"
@@ -32,7 +32,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
             android:contentDescription="@string/fab_content_desc"
-            app:srcCompat="@drawable/baseline_add_task_24"/>
+            app:srcCompat="@drawable/baseline_add_task_24" />
 
         <ProgressBar
             android:id="@+id/progressBar"
