--- a/src/main/res/layout/recycler_view_find_products.xml
+++ b/src/main/res/layout/recycler_view_find_products.xml
@@ -33,7 +33,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textViewName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ellipsize="end"
