--- a/src/main/res/layout/activity_add.xml
+++ b/src/main/res/layout/activity_add.xml
@@ -27,6 +27,7 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/productListButton"
+            style="?attr/floatingActionButtonLargeSecondaryStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
