Рефакторинг адаптеров и макетов для списков блюд и продуктов
Внедрён обобщённый DiffUtil.Callback для обновления списков, заменяющий ProductDiffCallback. Добавлен DishAdapter и соответствующий макет для отображения блюд. Адаптеры ProductFindListAdapter и ProductSelectedAdapter переведены на использование обобщённого diff callback; обновлены их макеты и привязки представлений. Переименованы и переработаны макеты элементов RecyclerView, связанных с продуктами, для единообразия. Улучшен интерфейс главной активности: добавлены прозрачные системные панели, новые строковые ресурсы и стили для улучшения визуальной согласованности.

--- a/src/main/res/layout/recycler_view_found_product.xml
+++ b/src/main/res/layout/recycler_view_found_product.xml
@@ -33,17 +33,35 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/textViewName"
+        android:id="@+id/nameDish"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
         android:ellipsize="end"
         android:maxLines="4"
-        android:paddingHorizontal="15dp"
+        android:textColor="?attr/colorOnSurface"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/textViewMass"
+        app:layout_constraintHorizontal_weight="0.6"
+        app:layout_constraintStart_toEndOf="@id/imageCard"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewMass"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:alpha="0.5"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textAlignment="textEnd"
         android:textColor="?attr/colorOnSurface"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/imageCard"
+        app:layout_constraintHorizontal_weight="0.25"
+        app:layout_constraintStart_toEndOf="@id/nameDish"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.divider.MaterialDivider
