--- a/src/main/res/layout/recycler_view_selected_product.xml
+++ b/src/main/res/layout/recycler_view_selected_product.xml
@@ -33,7 +33,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/textViewName"
+        android:id="@+id/nameDish"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
@@ -61,7 +61,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_weight="0.25"
-        app:layout_constraintStart_toEndOf="@id/textViewName"
+        app:layout_constraintStart_toEndOf="@id/nameDish"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.divider.MaterialDivider
