--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -13,4 +13,12 @@
     <style name="CustomProgressBar" parent="Widget.AppCompat.ProgressBar">
         <item name="android:indeterminateTint">?attr/colorOnBackground</item>
     </style>
+
+    <style name="MacroTextView">
+        <item name="android:textSize">14sp</item>
+        <item name="android:alpha">0.8</item>
+        <item name="android:textColor">?attr/colorOnSurface</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+
 </resources>
