--- a/src/main/res/layout/list_item_product.xml
+++ b/src/main/res/layout/list_item_product.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageCard"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:cardBackgroundColor="?attr/colorSurface"
+        app:cardBackgroundColor="@android:color/transparent"
         app:cardCornerRadius="20dp"
         app:cardElevation="0dp"
         app:cardPreventCornerOverlap="false"
