--- a/src/main/res/layout/dialog_input_mass.xml
+++ b/src/main/res/layout/dialog_input_mass.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="24dp">
+    android:paddingHorizontal="24dp"
+    android:paddingTop="8dp">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputMass"
@@ -11,7 +12,7 @@
         android:layout_height="wrap_content"
         android:hint="@string/mass"
         app:counterEnabled="true"
-        app:counterMaxLength="7"
+        app:counterMaxLength="4"
         app:errorEnabled="true"
         app:suffixText="@string/gram">
 
