--- a/src/main/res/layout/dialog_input_name.xml
+++ b/src/main/res/layout/dialog_input_name.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="24dp">
+    android:paddingHorizontal="24dp"
+    android:paddingTop="8dp">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/inputName"
@@ -17,7 +18,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text|textAutoCorrect"/>
+            android:inputType="textCapSentences|textAutoCorrect" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
