--- a/src/main/res/layout/fragment_view_added.xml
+++ b/src/main/res/layout/fragment_view_added.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="?attr/colorSurface"
     android:orientation="vertical">
 
@@ -30,7 +31,8 @@
         android:layout_height="450dp"
         android:layout_marginBottom="12dp"
         android:clipToPadding="false"
-        android:overScrollMode="ifContentScrolls" />
+        android:overScrollMode="ifContentScrolls"
+        tools:listitem="@layout/list_item_product" />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/addProductButton"
